# bookbot

./: .gitignore  DEVELOPMENT_TASKS.md  QUESTIONS.md  README.md  SWIFT_INTEGRATION.md  pyproject.toml
.github/workflows/: ci.yml
src/bookbot/agents/: base.py
src/bookbot/agents/librarian/: agent.py
src/bookbot/agents/query/: agent.py
src/bookbot/agents/selection/: agent.py
src/bookbot/agents/summarization/: agent.py
src/bookbot/database/: models.py
src/bookbot/utils/: cache.py  calibre_connector.py  epub_processor.py  rate_limiter.py  resource_manager.py  token_tracker.py  vector_store.py  venice_client.py
swift/BookBot/: Package.swift
swift/BookBot/Sources/: App.swift
swift/BookBot/Sources/Models/: Book.swift  QueryResponse.swift
swift/BookBot/Sources/Networking/: APIClient.swift
swift/BookBot/Sources/Utils/: ResourceMonitor.swift
swift/BookBot/Sources/Views/: BookDetailView.swift  ContentView.swift  LibraryView.swift
swift/BookBot/Sources/Views/Components/: BookRow.swift  QueryResponseView.swift
tests/: conftest.py  test_agent_integration.py  test_agents.py  test_cache.py  test_calibre_connector.py  test_calibre_integration.py  test_epub_processor.py  test_librarian_agent.py  test_query_agent.py  test_rate_limiter.py  test_selection_agent.py  test_summarization_agent.py  test_summarization_integration.py  test_token_tracker.py  test_vector_store.py  test_venice_client.py  test_vram_manager.py
