[tool.poetry]
name = "bookbot"
version = "0.1.0"
description = "Autonomous AI Research and Library System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "bookbot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
pydantic = "^2.5.3"
ebooklib = "^0.18.0"
html2text = "^2020.1.16"
aiohttp = "^3.9.1"
sqlalchemy = "^2.0.25"
aiosqlite = "^0.19.0"
chromadb = "^0.4.22"
pytest = "^8.2.0"
pytest-asyncio = "^0.25.3"
pytest-timeout = "^2.2.0"
uvloop = "^0.21.0"

numpy = "1.26.3"
cachetools = "^5.3.2"
aiofiles = "^23.2.1"
tenacity = "^8.2.3"
watchdog = "^3.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --durations=10"
asyncio_timeout = 300
log_level = "DEBUG"
filterwarnings = [
    "ignore::DeprecationWarning:chromadb.*:",
    "ignore::UserWarning:chromadb.*:",
    "ignore::RuntimeWarning:asyncio.*:",
    "ignore::ResourceWarning:asyncio.*:"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
